Stuck on changing piece colors

--- a/index.css
+++ b/index.css
@@ -30,28 +30,23 @@ header > h1 {
     font-weight: 600;
 }
 
-.black-square {
+.square {
     height: 100px;
-    width: 100px;;
-    background-color: black;
+    width: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 140px;
     padding-bottom: 20px;
-    color: green;
+    overflow: hidden;
+}
+
+.black-square {
+    background-color: black;
 }
 
 .white-square {
-    height: 100px;
-    width: 100px;
     background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 140px;
-    padding-bottom: 20px;
-    color: green;
 }
 
 .row {
@@ -66,7 +61,7 @@ header > h1 {
 .score,
 .options {
     width: 210px;
-    height: 400px;
+    height: 600px;
     /* background-color: coral; */
     display: flex;
     flex-direction: column;
@@ -93,8 +88,17 @@ h3 {
     align-items: center;
 }
 
+.options > div {
+    align-self: flex-start;
+    margin-left: 40px;
+}
+
+.options > h2 {
+    margin: 20px 0 5px 0;
+}
+
 h1 {
-    font-size: 24px;
+    font-size: 28px;
     font-weight: 550;
     align-self: center;
     margin: 25px 0;
