Added button press styling

--- a/index.css
+++ b/index.css
@@ -116,3 +116,18 @@ button {
     box-shadow: rgb(83, 83, 83) 2px 2px 3px;
     cursor: pointer;
 }
+
+/* Make button look pressed on click. */
+
+button:active {
+    background: #e5e5e5;
+    -webkit-box-shadow: inset 0px 0px 5px #c1c1c1;
+       -moz-box-shadow: inset 0px 0px 5px #c1c1c1;
+            box-shadow: inset 0px 0px 5px #c1c1c1;
+     outline: none;
+}
+
+/* Remove blue box after button press */
+button:focus {
+    outline: 0;
+}
